--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Painting -- Italy -- History'
 - !lcc 'ND'
+- GITenberg
 title: "The History of Painting in Italy, Vol. 5 (of 6)\r\nFrom the Period of the\
   \ Revival of the Fine Arts to the End of the Eighteenth Century"
 url: http://www.gutenberg.org/ebooks/39996
